@@ -6,6 +6,7 @@ S3method("[",listenv)
 S3method("[<-",listenv)
 S3method("[[",listenv)
 S3method("[[<-",listenv)
+S3method("length<-",listenv)
 S3method("map<-",listenv)
 S3method("names<-",listenv)
 S3method(as.list,listenv)
