@@ -2,6 +2,8 @@ Package: listenv
 ================
 
 Version: 0.4.0-9000 [2015-10-07]
+o Add support for growing or shrinking a list environment using
+  length(x) <- n.
 o Add unlist() for list environments.
 o BUG FIX: x[idxs], x[name] <- y and x$<name> <- y would introduce
   NA names for non-named list environments.
